# PitchLense

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EMAIL_NO_DB_CHANGES.md  EMAIL_SETUP.md  ENVIRONMENT_SETUP.md  FEATURES.md  HACKATHON_EMAIL_SETUP.md  LICENSE  README.md  SETUP_REPORT_API.md  deploy.sh  docker-compose.yml  env.example  env.template  install-email.bat  install-email.sh  load_env.sh  nginx.conf  package-lock.json  package.json  setup-database.sql  setup-env.sh  start.sh
.github/workflows/: deploy-cloud-run.yml
backend/: cleanup-orphaned-reports.js  data.db  database.sql  investments_schema.sql  investments_schema_update.sql  package-lock.json  package.json  pitchlense.db  requirements.txt  server.js  test-fmp.js
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analysis.py  documents.py  health.py  reports.py  startups.py  uploads.py
backend/app/core/: config.py  database.py  init_db.py  logging_config.py
backend/app/crud/: __init__.py  base.py  report.py  upload.py  user.py
backend/app/middleware/: __init__.py  logging_middleware.py
backend/app/models/: __init__.py  analysis.py  document.py  report.py  startup.py  upload.py  user.py
backend/app/schemas/: __init__.py  analysis.py  document.py  report.py  startup.py  upload.py  user.py
backend/app/services/: ai_service.py  analysis_service.py  document_service.py  startup_service.py
backend/app/utils/: gcs_utils.py
backend/test/: __init__.py  check_pinned_reports.py  conftest.py  test_api_endpoints.py  test_comprehensive_api.py  test_crud.py  test_db.py  test_db_pinned.py  test_file_count.py  test_file_organization.py  test_gcs_upload.py  test_models.py  test_pin_and_filter.py  test_pinned_filter.py  test_pinned_fix.py  test_report_api.py  test_report_path_persistence.py  test_reports_endpoint.py  test_simple_api.py
backend/uploads/: 06e5f2cb-b686-4b4d-9cd4-0e11bc5810e0.txt
extension/: GMAIL_FEATURE.md  QUICK_START.md  README.md  TESTING_GUIDE.md  background.js  content.js  generate_icons.html  gmail-content.js  manifest.json  package.json  popup.css  popup.html  popup.js
frontend/: academy.html  ai-chat.html  auth.html  create-report.html  email.html  extension.html  founder-dna.html  index.html  investment.html  main.jsx  main_broken.jsx  main_current.jsx  main_original.jsx  market.html  meeting-assistant.html  mobile-nav-updater.js  networking.html  news.html  package-lock.json  package.json  profile.html  report.html  search.html  styles.css  tailwind.config.js  video.html  view-report.html  walkthrough.html  whisper-network.html
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  NotificationTest.tsx  __init__.ts
frontend/src/pages/: Analysis.tsx  AnalysisDetail.tsx  CreateReport.tsx  Dashboard.tsx  Documents.tsx  Home.tsx  StartupDetail.tsx  Startups.tsx  ViewReports.tsx  __init__.ts
frontend/src/services/: __init__.ts  api.ts  reportService.ts
frontend/src/utils/: README.md  notifications.ts
frontend/static/: cache-util.js  investment.js  navbar.js  news.js  search.js
pitchlense/: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
pitchlense/extractors/: __init__.py  base.py  google_search.py  web.py
pitchlense/llm/: __init__.py  base.py  google_gemini.py
pitchlense/notebooks/: llm.ipynb
pitchlense/prompts/: audio.py  files.py  image.py  video.py
pitchlense/schema/: __init__.py  base.py  document.py
